force-app/main/default/objects/vlocity_ins__PriceList__c/vlocity_ins__PriceList__c.object-meta.xml
<CustomObject>
    <description>Represents the tax and fee details for the insurance jurisdictions in which your company sell/offer the insurance products and services.</description>
    <label>Tax and Fee</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxes and Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>