force-app/main/default/objects/vlocity_ins__PriceList__c/fields/vlocity_ins__ProcedureFormula__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProcedureFormula__c</fullName>
    <description>If rating type is calculation or integration procedure, this field will hold the formula used to calculate the price list amount.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Procedure Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>