force-app/main/default/objects/vlocity_ins__PriceList__c/fields/vlocity_ins__ProcedureName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProcedureName__c</fullName>
    <description>If rating type is calculation or integration procedure, this field will hold the name of the procedure.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Procedure Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>