force-app/main/default/objects/vlocity_ins__PriceList__c/fields/vlocity_ins__ProcedureSource__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProcedureSource__c</fullName>
    <description>If rating type is calculation or integration procedure, this field will hold the name of the variable that contains the calculated price list amount.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Procedure Source Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>